# vscode-fortran-example

./: CMakeLists.txt  FILE1.FOR  MAIN.FOR
